// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateOptions should throw when accessToken is empty 1`] = `
"Invalid option \\"accessToken\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#userglobal-configuration
 - CLI: \\"--accessToken myAccessToken\\""
`;

exports[`validateOptions should throw when accessToken is missing 1`] = `
"Invalid option \\"accessToken\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#userglobal-configuration
 - CLI: \\"--accessToken myAccessToken\\""
`;

exports[`validateOptions should throw when both branches and branchChoices are missing 1`] = `
"Invalid option \\"branches\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#project-specific-configuration
 - CLI: \\"--branches 6.1\\""
`;

exports[`validateOptions should throw when upstream is empty 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#project-specific-configuration
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateOptions should throw when upstream is missing 1`] = `
"Invalid option \\"upstream\\"

You can add it with either:
 - Config file: \\".backportrc.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#project-specific-configuration
 - CLI: \\"--upstream elastic/kibana\\""
`;

exports[`validateOptions should throw when username is empty 1`] = `
"Invalid option \\"username\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#userglobal-configuration
 - CLI: \\"--username sqren\\""
`;

exports[`validateOptions should throw when username is missing 1`] = `
"Invalid option \\"username\\"

You can add it with either:
 - Config file: \\"/myHomeDir/.backport/config.json\\". Read more: https://github.com/sqren/backport/blob/b9e2ec8e7a56bcbee96a8e9d38088ddd6ccaf65b/docs/configuration.md#userglobal-configuration
 - CLI: \\"--username sqren\\""
`;
